# netlab

./: .gitignore  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  Justfile  README.md  Taskfile.yml  config.nix  devshell.nix  flake.nix  pyproject.toml  renovate.json  secrets.sops.yaml  shell.nix  treefmt.nix
.github/workflows/: check.yml  lint.yml  openwrt-update.yml  update-openwrt.yml  validate-uci.yml
apps/: apply.nix  build.nix  check-update.nix  deploy.nix  rotate-secrets.nix  test.nix
config/: default.yml  firewall.yaml  network.yaml  openwrt.env  router.yaml  secrets.placeholder.yaml  secrets.sops.yaml  services.yaml
docs/: README.md  openwrt-operations.md  operations.md  zero-trust-network.md
openwrt/: .envrc  .gomplate.yaml  Taskfile.yml
openwrt/scripts/: build.sh  check-update.sh  check.sh  common.sh  render.sh  setup.sh  sysupgrade.sh
openwrt/templates/: network.tmpl  wireless.tmpl
openwrt/testdata/: network.yaml
scripts/: build.sh  check-update.sh  check.sh  common.sh  deploy.sh  render.sh  rotate-wireguard-secrets.py  sysupgrade.sh  test.sh  update.sh  validate.sh
scripts/models/: __init__.py  device.py  image.py
secrets/: adguardhome.sops.yaml  network.sops.yaml  wireless.sops.yaml
templates/: 99-service.j2  99-service.tmpl  adguardhome.yaml.j2  adguardhome.yaml.tmpl  authorized_keys.j2  authorized_keys.tmpl  crontab.j2  dhcp.j2  dhcp.tmpl  dropbear.j2  dropbear.tmpl  firewall.tmpl  imagebuilder.config.j2  network.j2  network.tmpl  package-list.txt.j2  root-crontab.tmpl  wireless.j2  wireless.tmpl
templates/files/: firewall.j2
(+15 files in other folders)
