[project]
name = "netlab"
version = "0.1.0"
description = "OpenWrt firmware configuration workflow for a zero-trust homelab network."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx",
  "jinja2",
  "pydantic",
  "pydantic-settings",
  "rich",
  "ruamel-yaml",
  "typer",
]

[build-system]
requires = ["editables", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
